# AudioRAG

./: .coverage  .env.test  .env.test2  .git-rewrite-msg-filter.py  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  ENGINEERING_REVIEW.md  PROPOSALS.md  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
.sisyphus/: boulder.json
.sisyphus/drafts/: audiorag-strategic-direction.md
.sisyphus/notepads/audiorag-package/: learnings.md
.sisyphus/notepads/audiorag-v2-redesign/: learnings.md
.sisyphus/notepads/production-grade-refactor/: codemap.md
.sisyphus/plans/: audiorag-package.md  audiorag-v2-redesign.md  production-grade-refactor.md
docs/: api-reference.md  architecture.md  configuration.md  providers.md  quickstart.md
src/audiorag/: __init__.py  chunking.py  config.py  exceptions.py  pipeline.py  retry_config.py
src/audiorag/chunk/: __init__.py  time_based.py
src/audiorag/cli/: __init__.py
src/audiorag/core/: __init__.py  budget.py  budget_store_sqlite.py  config.py  doctor.py  exceptions.py  id_strategy.py  logging_config.py  models.py  provider_factory.py  retry_config.py  state.py
src/audiorag/core/protocols/: __init__.py  audio_source.py  budget_store.py  chunking.py  generation.py  stt.py  vector_store.py
src/audiorag/embed/: __init__.py  _base.py  cohere.py  openai.py  voyage.py
src/audiorag/generate/: __init__.py  _base.py  anthropic.py  gemini.py  openai.py
src/audiorag/protocols/: audio_source.py  embedding.py  reranker.py  stt.py
src/audiorag/providers/: __init__.py  anthropic_generation.py  assemblyai_stt.py  audio_splitter.py  chromadb_store.py  cohere_embeddings.py  cohere_reranker.py  deepgram_stt.py  gemini_generation.py  groq_stt.py  openai_embeddings.py  openai_generation.py  openai_stt.py  passthrough_reranker.py  pinecone_store.py  supabase_pgvector.py  voyage_embeddings.py  weaviate_store.py  youtube_scraper.py
src/audiorag/rerank/: __init__.py  _base.py  cohere.py  passthrough.py
src/audiorag/source/: __init__.py  _base.py  discovery.py  local.py  splitter.py  url.py  ydl_utils.py  youtube.py
src/audiorag/store/: __init__.py  _base.py  chromadb.py  pinecone.py  supabase.py  weaviate.py
src/audiorag/transcribe/: __init__.py  _base.py  assemblyai.py  deepgram.py  groq.py  openai.py
tests/: conftest.py  test_budget_governor.py  test_budget_sipping.py  test_budget_store.py  test_chunking.py  test_config.py  test_doctor.py  test_embed_providers.py  test_generate_providers.py  test_id_strategy.py  test_lazy_imports.py  test_models.py  test_pipeline.py  test_pipeline_budget_governor.py  test_pipeline_id_strategy.py  test_pipeline_vector_store_verification.py  test_protocol_conformance.py  test_protocols.py  test_providers.py  test_rerank_providers.py  test_source_discovery.py  test_state.py  test_store_providers.py  test_transcribe_providers.py  test_vector_store_verification.py
