[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

[project]
name = "audiorag"
version = "0.7.0"
description = "RAG over audio files with provider-agnostic pipeline"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.12"
authors = [
    {name = "Atharva Verma", email = "atharva.verma18@gmail.com"},
]
maintainers = [
    {name = "Atharva Verma", email = "atharva.verma18@gmail.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "aiosqlite>=0.19",
    "tenacity>=8.0",
    "structlog>=24.0",
    "textual>=0.47.0",
    "rich>=13.0.0",
    "questionary>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/atharva-again/audiorag"
Repository = "https://github.com/atharva-again/audiorag"
Issues = "https://github.com/atharva-again/audiorag/issues"

[project.scripts]
audiorag = "audiorag.cli:main"

[project.optional-dependencies]
defaults = [
    "yt-dlp>=2026.02.04",
]
all = [
    "openai>=1.0",
    "chromadb>=0.4",
    "yt-dlp>=2026.02.04",
    "cohere>=5.0",
    "pinecone-client>=2.0",
    "weaviate-client>=3.0",
    "supabase>=1.0",
    "anthropic>=0.18",
    "google-genai>=1.0",
    "voyageai>=0.2",
    "groq>=0.4",
    "assemblyai>=0.51",
    "yt-dlp-ejs>=0.4.0",
    "curl_cffi>=0.7.0,<0.15.0",
]
# STT providers
openai = ["openai>=1.0"]
deepgram = ["deepgram-sdk>=2.0"]
assemblyai = ["assemblyai>=0.51"]
groq = ["groq>=0.4"]
# Embedding providers
cohere = ["cohere>=5.0"]
voyageai = ["voyageai>=0.2"]
# Vector stores
chromadb = ["chromadb>=0.4"]
pinecone = ["pinecone-client>=2.0"]
weaviate = ["weaviate-client>=3.0"]
supabase = ["supabase>=1.0"]
# Generation providers
anthropic = ["anthropic>=0.18"]
google-genai = ["google-genai>=1.0"]
# Reranking
rerank-cohere = ["cohere>=5.0"]
# YouTube scraping
youtube = [
    "yt-dlp>=2026.02.04",
    "yt-dlp-ejs>=0.4.0",
    "curl_cffi>=0.7.0,<0.15.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-asyncio>=0.23,<1.0",
    "pytest-cov>=5.0,<6.0",
    "pytest-mock>=3.0,<4.0",
    "ruff>=0.9.0,<1.0",
    "ty>=0.0.15,<1.0",
    "prek>=0.3.0,<1.0",
    "twine>=6.2.0,<7.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::pydantic.warnings.PydanticDeprecatedSince20:assemblyai.client",
]

[tool.coverage.run]
source = ["src/audiorag"]
omit = [
    "*/tests/*",
    "*/test_*",
    "src/audiorag/cli/__init__.py",
    # Provider modules - require external API keys to test
    "src/audiorag/embed/*",
    "src/audiorag/generate/*",
    "src/audiorag/store/*",
    "src/audiorag/transcribe/*",
    "src/audiorag/rerank/*",
    # Source modules - require external dependencies
    "src/audiorag/source/*",
]

[tool.coverage.report]
fail_under = 65

[tool.ruff]
target-version = "py312"
line-length = 100
indent-width = 4

[tool.ruff.lint]
select = [
    "F",
    "E",
    "W",
    "UP",
    "B",
    "SIM",
    "I",
    "N",
    "D",
    "ANN",
    "S",
    "C4",
    "ISC",
    "PT",
    "RET",
    "ARG",
    "PL",
    "RUF",
]
ignore = [
    # Docstring rules - relaxed for this project
    "D100", "D101", "D102", "D103", "D104", "D105", "D106", "D107",
    # Type annotation relaxations
    "ANN204",  # special methods
    "ANN401",  # Any is acceptable
    # Security rules - relaxed for tests/scripts
    "S101",  # assert in tests
    "S603",  # subprocess for yt-dlp
    "S608",  # SQL in tests
    # Other practical relaxations
    "PLC0415",  # lazy imports
    "B904",  # raise without from
    "PLR0913",  # many arguments
    "PLR2004",  # magic numbers
    "ARG002",  # protocol compliance
    "SIM117",  # nested with
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "ANN",
    "S",
    "D",
    "PLR2004",
]
"**/__init__.py" = [
    "F401",
    "ANN202",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ty]
[tool.ty.environment]
python-version = "3.12"

[tool.ty.rules]
unresolved-import = "ignore"
unused-type-ignore-comment = "ignore"

[tool.ty.src]
include = ["src", "tests"]
exclude = [
    "**/__pycache__",
    "**/node_modules",
    "**/.venv",
    "**/dist",
    "src/audiorag/cli/__init__.py",
]

[tool.ty.terminal]
error-on-warning = false
output-format = "full"
